--- a/index.html
+++ b/index.html
@@ -3,32 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rock-Paper-Scissors-Game</title>
+    <title>Rock Paper Scissors Game</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Rock Paper Scissors</h1>
     <div class="choices">
         <div class="choice" id="rock">
-            <img src="images/Rock.jpg" alt="">
+            <img src="images/Rock.jpg" alt="">            
         </div>
         <div class="choice" id="paper">
-            <img src="images/Paper.jpg" alt="">
+            <img src="images/Paper.jpg" alt="">            
         </div>
-        <div class="choice" id="Scissor">
-            <img src="images/Scissor.jpg" alt="">
+        <div class="choice" id="scissor">
+            <img src="images/Scissor.jpg" alt="">            
         </div>
     </div>
+
     <div class="score-board">
         <div class="score">
             <p id="user-score">0</p>
-            <p>YOU</p>
+            <p>You</p>
         </div>
         <div class="score">
             <p id="comp-score">0</p>
-            <p>COMPUTER</p>
+            <p>Computer</p>
         </div>
     </div>
+
     <div class="msg-container">
         <p id="msg">Play your move</p>
     </div>
